--- a/frontend/src/app/components/user/login/login.component.html
+++ b/frontend/src/app/components/user/login/login.component.html
@@ -1,1 +1,65 @@
-<p>login works!</p>
+<section class="vh-100" style=" background-image: url('https://www.codeur.com/tuto/wp-content/uploads/2022/01/pexels-roberto-nickson-2559941-1.jpg') ">
+
+    <div class="container h-150" style="background-color: transparent ">
+      <div class="row d-flex justify-content-center align-items-center h-100"  style="background-color: transparent ">
+        <div class="col-lg-12 col-xl-11" style="background-color: transparent ">
+          <div class="card text-black" style="background-color: transparent  ">
+            <div class="card-body p-md-5">
+              <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+  
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Se connecter</p>
+  
+                  <form class="mx-1 mx-md-4" style="background-color: transparent "   #f="ngForm">
+  
+                   
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="email" id="form3Example3c" class="form-control" name="Email" #Email="ngModel"  ngModel   />
+                        <label class="form-label" for="form3Example3c">Email</label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input type="text" id="form3Example3c" class="form-control" name="Password" #Password="ngModel"  ngModel   />
+                        <label class="form-label" for="form3Example3c">Mot de passe</label>
+                      </div>
+                    </div>
+  
+                    
+  
+                    <div class="form-check d-flex justify-content-center mb-5">
+                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                      <label class="form-check-label" for="form2Example3">
+                        I agree all statements in <a href="#!">Terms of service</a>
+                      </label>
+                    </div>
+  
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      <button type="button" class="btn btn-primary btn-lg" (click)="Login(f.value)" >Login</button>
+                    </div>
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      Vous n'avez pas un compte
+                      <a href="http://localhost:4200/register">  Register</a>
+                    </div>
+                 
+  
+                  </form>
+  
+                </div>
+                <!-- <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+  
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                    class="img-fluid" alt="Sample image">
+  
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
