--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-navbar></app-navbar>
-<!-- Page Content-->
+ Page Content
 <section>
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5">
@@ -9,3 +8,7 @@
     </div>
 </section>
 <app-category-bar></app-category-bar>
+<div>
+<app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
