--- a/frontend/src/app/components/common/navbar/navbar.component.html
+++ b/frontend/src/app/components/common/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark ">
-    <a href="# " class="navbar-brand active ">
+    <a href="#" class="navbar-brand active ">
         <!-- Logo Image-->
-        <img src="../../../assets/img/Logo_blanc.png " width="60 " alt=" " class="d-inline-block align-middle mr-2 ">
+        <img src="assets/img/Logo_blanc.png " width="60 " alt=" " class="d-inline-block align-middle mr-2 ">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,12 +22,13 @@
                 <a class="nav-link" href="#">Evenements</a>
             </li>
             <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="http://example.com" data-bs-toggle="dropdown" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Maps</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown08">
-                    <a class="dropdown-item" href="#">Lien 1</a>
-                    <a class="dropdown-item" href="#">Lien 2</a>
-                    <a class="dropdown-item" href="#">Lien 3</a>
-                </div>
+              <a class="nav-link" routerLink="/map">Maps</a>
+<!--                <a class="nav-link dropdown-toggle" href="http://example.com" data-bs-toggle="dropdown" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Maps</a>-->
+<!--                <div class="dropdown-menu" aria-labelledby="dropdown08">-->
+<!--                    <a class="dropdown-item" routerLink="/map">Global Map</a>-->
+<!--                    <a class="dropdown-item" href="#">Lien 2</a>-->
+<!--                    <a class="dropdown-item" href="#">Lien 3</a>-->
+<!--                </div>-->
             </li>
         </ul>
     </div>
