--- a/frontend/src/app/components/common/navbar/navbar.component.html
+++ b/frontend/src/app/components/common/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link active disabled" href="#">Acceuil</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" [routerLink]="['/blog']" routerLinkActive="router-link-active" >Blog</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Produits</a>
