--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -11097,8 +11097,8 @@ fieldset:disabled .btn {
         display: none !important;
     }
 }
-
+/* 
 body {
     background: url("../img/HomePage1.jpg") no-repeat center center fixed;
     background-size: cover;
-}
+} */
