--- a/frontend/src/app/components/blog/blog-dashboard/blog-dashboard.component.html
+++ b/frontend/src/app/components/blog/blog-dashboard/blog-dashboard.component.html
@@ -1,4 +1,61 @@
-<table class="table table-striped">
+<form><div>
+<form class="d-flex" role="search">
+
+  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+  <button class="btn btn-outline-success" type="submit">Search</button>
+
+</form>
+</div>
+<br>
+<div class="buttonAdd">
+<button type="button" class="btn btn-light">Creer un blog</button>
+</div>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+</div>
+</form>
+
+<div class="container-fluid g-0 p-2">
+
+  
+
+<!--<table class="table table-striped">
   <thead>
   <tr>
     <th scope="col">title</th>
@@ -26,5 +83,5 @@
     </td>
   </tr>
   </tbody>
-</table>
+</table> -->
 
