--- a/frontend/src/assets/css/red.css
+++ b/frontend/src/assets/css/red.css
@@ -1,12 +1,12 @@
 ﻿/*!
-* Created by Kroplet (https://www.kroplet.com)
-* The easiest way to create Bootstrap 4 themes.
+* Created by Kroplet (https://www.kroplet.com) 
+* The easiest way to create Bootstrap 4 themes. 
 */
 
 /*!
-* Bootstrap v4.1.0 (https://getbootstrap.com)
-* Copyright 2011-2017 The Bootstrap Authors
-* Copyright 2011-2017 Twitter, Inc.
+* Bootstrap v4.1.0 (https://getbootstrap.com) 
+* Copyright 2011-2017 The Bootstrap Authors 
+* Copyright 2011-2017 Twitter, Inc. 
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)*/
 :root {
   --blue: #2979ff;
@@ -4275,7 +4275,7 @@ button.close {
   .bs-popover-top .arrow::before, .bs-popover-auto[x-placement^="top"] .arrow::before {
     bottom: 0;
     border-top-color: rgba(0, 0, 0, 0.25); }
-
+  
   .bs-popover-top .arrow::after,
   .bs-popover-auto[x-placement^="top"] .arrow::after {
     bottom: 2px;
@@ -4295,7 +4295,7 @@ button.close {
   .bs-popover-right .arrow::before, .bs-popover-auto[x-placement^="right"] .arrow::before {
     left: 0;
     border-right-color: rgba(0, 0, 0, 0.25); }
-
+  
   .bs-popover-right .arrow::after,
   .bs-popover-auto[x-placement^="right"] .arrow::after {
     left: 2px;
@@ -4312,7 +4312,7 @@ button.close {
   .bs-popover-bottom .arrow::before, .bs-popover-auto[x-placement^="bottom"] .arrow::before {
     top: 0;
     border-bottom-color: rgba(0, 0, 0, 0.25); }
-
+  
   .bs-popover-bottom .arrow::after,
   .bs-popover-auto[x-placement^="bottom"] .arrow::after {
     top: 2px;
@@ -4341,7 +4341,7 @@ button.close {
   .bs-popover-left .arrow::before, .bs-popover-auto[x-placement^="left"] .arrow::before {
     right: 0;
     border-left-color: rgba(0, 0, 0, 0.25); }
-
+  
   .bs-popover-left .arrow::after,
   .bs-popover-auto[x-placement^="left"] .arrow::after {
     right: 2px;
@@ -7761,7 +7761,7 @@ footer h5 {
 
 /*all themes colors*/
 .bg-black {
-  background-color: #EEEEEE; }
+  background-color: #000000; }
 
 .bg-blue {
   background-color: #2979ff; }
