--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -2,6 +2,10 @@
 <section class="smart-scroll">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar-dark">
+      <a href="#" class="navbar-brand active ">
+        <!-- Logo Image-->
+        <img src="assets/img/Logo_blanc.png " width="60" class="d-inline-block align-middle mr-2 ">
+      </a>
       <a class="navbar-brand heading-black" routerLink="/">
         HuntKingdom
       </a>
@@ -32,6 +36,26 @@
     </nav>
   </div>
 </section>
+
+
+<!-- Navigation-->
+<nav class="navbar navbar-expand navbar-dark  fixed-bottom  justify-content-center ">
+  <div class="nav justify-content-center">
+    <div class="container px-4 px-lg-5">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul>
+          <a class="active" href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse dans les forets" src="../../../assets/img/forest-Icon-W.png" /></a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="pêche" src="../../../assets/img/sea-icon-W.png" /> </a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse dans les deserts" src="../../../assets/img/desert-Icon-W.png" /></a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse des oiseaux" src="../../../assets/img/sky-Icon-W.png" /></a>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
 
 
 
