--- a/frontend/src/app/views/user/home/home/home.component.html
+++ b/frontend/src/app/views/user/home/home/home.component.html
@@ -17,6 +17,22 @@
   </div>
 </section>
 
+<!--Themes Navigation-->
+<nav class="navbar navbar-expand navbar-dark  fixed-bottom  justify-content-center ">
+  <div class="nav justify-content-center">
+    <div class="container px-4 px-lg-5">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul>
+          <a class="active" href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse dans les forets" src="../../../../../assets/img/forest-Icon-W.png" /></a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="pêche" src="../../../../../assets/img/sea-icon-W.png" /> </a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse dans les deserts" src="../../../../../assets/img/desert-Icon-W.png" /></a>
+          <a href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2" data-toggle="tooltip" data-placement="top" title="Chasse des oiseaux" src="../../../../../assets/img/sky-Icon-W.png" /></a>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
 <!--news section-->
 <section class="py-7 bg-dark section-angle top-left bottom-left" id="blog">
@@ -130,7 +146,4 @@
   </div>
 </footer>
 
-<!--scroll to top-->
-<div class="scroll-top">
-  <i class="fa fa-angle-up" aria-hidden="true"></i>
-</div>
+
