home section dashboard

--- a/frontend/src/app/views/admin/admin-events/events/events.component.html
+++ b/frontend/src/app/views/admin/admin-events/events/events.component.html
@@ -1,1 +1,3 @@
-<p> events works! events works events works events works events works events works events works events works</p>
+<section class="home-section">
+    <div class="text">Dashboard</div>
+</section>
