--- a/frontend/src/app/views/admin/admin-store/store/store.component.html
+++ b/frontend/src/app/views/admin/admin-store/store/store.component.html
@@ -1,8 +1,3 @@
-<p>
-
-    store works! store works!store works!store works!store works!store works!store works!store works!</p>
-<p>store works!</p>
-<p>store works!</p>
-<p>store works!</p>
-<p>store works!</p>
-<p>store works!</p>
+<section class="home-section">
+    <div class="text">Dashboard</div>
+</section>
