--- a/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
+++ b/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
@@ -56,3 +56,46 @@
     </div>
   </div>
 </section>
+<div class="album py-5 bg-light">
+  <div class="container">
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+      <div class="col" *ngFor="let blog of blogList">
+        <a href="#">
+        <div class="card shadow-sm">
+
+          <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Paul_Childerley_driven_hunt_Finland_04.png/1024px-Paul_Childerley_driven_hunt_Finland_04.png" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+
+         <div class="card-title">
+                <p>{{blog.title}}</p>
+            <div class="d-flex justify-content-between align-items-center"></div>
+          </div>
+
+          <div class="card-descrption">
+            <div class="d-flex justify-content-between align-items-center"></div>
+          </div>
+
+          <div class="card-body">
+            <p class="card-text">{{blog.description}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a routerLink="blogs/details" button type="button" class="btn btn-sm fa fa-eye">Lire suite</a>
+                <button type="button" class="btn btn-sm btn-outline-secondary">Modifier</button>
+                <button type="button" class="btn btn-sm fa fa-eye">Supprimer</button>
+              </div>
+              <small class="text-muted">9 mins</small>
+            </div>
+
+          </div>
+
+        </div>
+      </a>
+      </div>
+
+
+
+
+
+    </div>
+  </div>
