--- a/frontend/src/app/views/user/home/home/home.component.html
+++ b/frontend/src/app/views/user/home/home/home.component.html
@@ -8,7 +8,7 @@
         <!--        <h1 class="heading-black text-capitalize">Quickly build landing pages with Knight</h1>-->
         <!--        <p class="lead py-3">Knight is a platform that helps freelancers and companies build beautiful landing-->
         <!--          pages in minutes. Sign up for free.</p>-->
-        <button class="btn btn-primary d-inline-flex flex-row align-items-center" routerLink="/sign_in">
+        <button class="btn btn-primary d-inline-flex flex-row align-items-center" routerLink="/user/sign_in">
           Get started now
           <em class="ml-2" data-feather="arrow-right"></em>
         </button>
