--- a/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
+++ b/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
@@ -20,7 +20,7 @@
               <p class="card-text">{{spot.name}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary" (click)="goToDetails(spot._id)">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
                 <small class="text-muted">{{spot.rate}} ⭐</small>
