--- a/frontend/src/app/views/user/user/register/register.component.html
+++ b/frontend/src/app/views/user/user/register/register.component.html
@@ -42,16 +42,16 @@
                 <div class="form-check d-flex  mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c"/>
                   <label class="form-check-label" for="form2Example3c">
-                    I agree all statements in <a href="#!">Terms of service</a>
+                    J'accepte toutes les déclarations dans <a href="#!">les conditions d'utilisation</a>
                   </label>
                 </div>
-  
+ 
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                   <button type="button" class="btn btn-primary btn-lg" (click)="addUser(f.value)">Register</button>
                 </div>
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                  Vous avez déja un compte
-                  <a routerLink="/sign_in">Login</a>
+                  Vous avez déja un compte! 
+                  <a routerLink="user/sign_in"> Se Connecter</a>
                 </div>
               </form>
             </div>
