routing for login -> profile

--- a/frontend/src/app/views/user/user/profile/profile.component.html
+++ b/frontend/src/app/views/user/user/profile/profile.component.html
@@ -19,11 +19,11 @@
                                     </div>
                                 </div>
                                 <div class="row mt-2">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="first name" value=""></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="first name" value="{{user.Prenom}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Last name"></div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value=""></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Phone number"></div>
                                 </div>
                                 <div class="row mt-3">
@@ -31,7 +31,7 @@
                                     <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Country"></div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value=""></div>
+                                    <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value="">{{user_id}}</div>
                                     <div class="col-md-6"><input type="text" class="form-control" value="" placeholder="Role"></div>
                                 </div>
                                 <div class="mt-5 text-right"><button class="btn btn-primary profile-button" type="button">Edit Profile</button></div>
