style , dashboard table , eventMainPage

--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -1,48 +1,47 @@
 <!--modules navigation-->
-<section class="smart-scroll" >
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-md navbar-dark">
-      <a href="#" class="navbar-brand active" >
-        <!-- Logo Image-->
-        <img src="assets/img/Logo_blanc.png " width="60" class="d-inline-block align-middle mr-2 ">
-      </a>
-      <a class="navbar-brand heading-black" routerLink="/" href="#">
-        HuntKingdom
-      </a>
-      <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
-              data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-              aria-label="Toggle navigation">
-        <span data-feather="grid"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="#blogs" routerLink="/blogs">Blogs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="#events" routerLink="/events">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="#maps" routerLink="/maps">Maps</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#"
-               routerLink="/products">
-              <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-              Shop
+<section class="smart-scroll">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <a href="# " class="navbar-brand active ">
+                <!-- Logo Image-->
+                <img src="assets/img/Logo_blanc.png " width="60 " alt=" " class="d-inline-block align-middle mr-2 ">
             </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active disabled" href="#" routerLink="/blogs">Acceuil</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#blogs" routerLink="/blogs">Blog</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#events" routerLink="/events">Evenement</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#blogs" routerLink="/Maps">Maps</a>
+                    </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link" href="#" routerLink="/products">Shop</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn primarHKBtn" type="button" routerLink="/user/sign_in">Rejoingnez Les HUNTERS</button>
+            </div>
+        </nav>
+    </div>
 </section>
 
 <!--scroll to top-->
 <div class="scroll-top">
-  <i class="fa fa-angle-up" aria-hidden="true"></i>
+    <i class="fa fa-angle-up" aria-hidden="true"></i>
 </div>
 
 <div>
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
