--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -1,1 +1,15 @@
-<p>events works!</p>
+<div class="bg-dark text-secondary px-4 py-5 text-center" id="eventHeader">
+    <div class="py-5">
+        <h1 class="display-5 fw-bold text-white">HUNTERS EVENTS</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="fs-5 mb-4">HuntingKigdom met à votre disposition une intefcae pour vos évenements , vos campings , vos conférences , vos sorties ... Profitez bien ^^
+            </p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class=" primarHKBtn btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Ajoutez votre evenement </button>
+                <button type="button" class=" secondaryHKBtn btn btn-outline-light btn-lg px-4">Cherchez votre evenement</button>
+            </div>
+
+
+        </div>
+    </div>
+</div>
