Maps Link , sorry Youssef

--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="#events" routerLink="/events">Evenement</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#blogs" routerLink="/Maps">Maps</a>
+                        <a class="nav-link" href="#maps" routerLink="/maps">Maps</a>
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link" href="#" routerLink="/products">Shop</a>
