prob deffault css

--- a/frontend/src/app/views/user/user-products/products/products.component.html
+++ b/frontend/src/app/views/user/user-products/products/products.component.html
@@ -1,19 +1,19 @@
 <div class=" h-screen bg-slate-400 ">
 
-  <li class="font-sans block absolute right-14 top-14 align-middle text-neutral-300 hover:text-gray-700">
-    <a role="button" class="relative flex"(click)="toggle()">
-      <svg class="flex-1 w-8 h-8 fill-current" viewbox="0 0 24 24">
-        <path d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4H3L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z"/>
-        </svg>
-        <span class="absolute right-0 top-0 rounded-full bg-red-600 w-4 h-4 top right p-0 m-0 text-white font-mono text-sm  leading-tight text-center">2
-      </span>
-    </a>
-  </li>
 
-    <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+
+<div id="test" class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
          <h2 class="sr-only">Products</h2>
 
-
+         <li class="font-sans block absolute right-16 top-14 align-middle text-neutral-300 hover:text-gray-700">
+          <a role="button" class="relative flex" (click)="toggle()">
+            <svg class="flex-1 w-8 h-8 fill-current" viewbox="0 0 24 24">
+              <path d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4H3L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z"/>
+              </svg>
+              <span class="absolute right-0 top-0 rounded-full bg-red-600 w-4 h-4 top right p-0 m-0 text-white font-mono text-sm  leading-tight text-center">2
+            </span>
+          </a>
+        </li>
 
 
       <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8" >
@@ -61,7 +61,6 @@
       From: "opacity-100"
       To: "opacity-0"
   -->
-
   <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" ></div>
 
   <div class="fixed inset-0 overflow-hidden mt-9">
